--- a/front/abstract.tex
+++ b/front/abstract.tex
@@ -8,6 +8,6 @@ Developing prototypes helps to create a shared understanding between developers 
 However, widely used general-purpose programming languages are not optimized for tight feedback loops and interactive prototypes that evolve into production-grade software.
 
 Viewing the process of programming as one of conversing with stakeholders, oneself, and the compiler, we looked at existing solutions that target dealing with cognitive load as well as tightening feedback loops and applied these findings to widely used general-purpose programming languages.
-Based on todo comments, applications of Hole-Driven Development, and creative ways of simulating holes, we defined 13 properties intrinsic to using holes in programming.
+Based on todo comments, applications of Hole-Driven Development, and creative ways of simulating holes, we identified 13 properties intrinsic to using holes in programming.
 Based on these properties, we developed \emph{Holey}, a proof of concept for applying the ideas of Hole-Driven development to the widely used general-purpose programming language \CS.
 This proof of concept can be used to investigate possible advantages regarding the usability and applicability of writing incomplete, but executable and evolvable software.
