--- a/front/preface.tex
+++ b/front/preface.tex
@@ -20,8 +20,8 @@ Thank you, Clayton, Luke, Leah, Anton, and Görel, for your input, and Alan, for
 Speaking of input, many ideas are born, enhanced, rejected, and validated at this inspiring monthly round table with Alex, Dominik, Georg, Sebastian, and Stefan.
 You played a big part in why I returned to software development and still stick around; thanks for all the inspiring conversations about everything.
 
-The people who have probably been most affected by my writing this thesis are my family, flatmates, and friends.
-Thank you for all your support and sorry for the times I've been unresponsive, especially Mom, Tinka, Mona, Jakob, Rosa, Daniel, David, and Marlene!
+The people who have probably been most affected by me writing this thesis are my family, flatmates, and friends.
+Thank you for all your support and sorry for the times I have been unresponsive, especially Mom, Tinka, Mona, Jakob, Rosa, Daniel, David, and Marlene!
 
 I feel really privileged that my dad had the greatest influence on this thesis.
 He challenges my beliefs, lets me challenge his, and can give me hints about decades of experience in software engineering.
@@ -29,7 +29,7 @@ He is also the best proofreader, knowing so many details about grammar, scientif
 
 This thesis would not have been possible without my supervisor Stephan Selinger.
 Thank you for your input, patience, trust, and flexibility, and for supervising a thesis unrelated to machine learning or large language models in 2023.
-I could still not imagine doing an Ironman after completing the 100km trail run, but I've got the feeling that writing this thesis might have brought me a little bit closer.
+I can still not imagine doing an Ironman after completing the 100km trail run, but I've got the feeling that writing this thesis might have brought me a little bit closer.
 
 \vspace{6ex}
 \noindent
