--- a/front/kurzfassung.tex
+++ b/front/kurzfassung.tex
@@ -12,6 +12,6 @@
     Durch das Betrachten des Softwareentwicklungsprozesses als Prozess der Kommunikation identifizierten wir bestehende Lösungen, welche dabei helfen kognitive Belastungen zu minimieren und kurze Feedback-Schleifen ermöglichen.
     Basierend auf Todo-Kommentaren, dem Konzept des Hole-Driven Developments und kreativen Lösungen zum Markieren von unfertigen Programmteilen identifizierten wir 13 Eigenschaften von Programmteilen, die als unfertig gekennzeichnet sind.
     Basierend auf diesen Eigenschaften entwickelten wir \emph{Holey}, einen Ansatz zur Verwendung von Hole-Driven Development in der weit verbreiteten Programmiersprache \CS.
-    Wir zeigen, dass es möglich ist, unter Verwendung von existierenden Sprachkonstrukten und einer erweiterbaren Bibliothek, Hole-Driven Development in\ \CS zu verwenden.
+    Wir zeigen, dass es möglich ist, unter Verwendung von existierenden Sprachkonstrukten und einer erweiterbaren Bibliothek, Hole-Driven Development in \CS\ zu verwenden.
     Basierend auf dieser Machbarkeitsstudie kann untersucht werden, inwieweit das Entwickeln von lediglich teils fertigen, jedoch ausführ- und weiterentwickelbaren Anwendungen Vorteile bietet.
 \end{german}
